--- a/cloudformation/service-windows.yml
+++ b/cloudformation/service-windows.yml
@@ -603,99 +603,51 @@ Resources:
                         '
                       - </script>
     Metadata:
-            AWS::CloudFormation::Init:
-                config:
-                    commands:
-                        01_import_powershell_module:
-                            command: !Sub powershell.exe -Command Import-Module ECSTools
-                        02_add_instance_to_cluster:
-                            command: !Sub powershell.exe -Command Initialize-ECSAgent -Cluster ${ECSDefaultCluster} -EnableTaskIAMRole
-                    files:
-                        c:\cfn\cfn-hup.conf:
-                            content: !Join ['', ['[main]
-                                    ', stack=, !Ref 'AWS::StackId', '
-                                    ', region=, !Ref 'AWS::Region', '
-                                    ']]
-                        c:\cfn\hooks.d\cfn-auto-reloader.conf:
-                            content: !Join ['', ['[cfn-auto-reloader-hook]
-                                    ', 'triggers=post.update
-                                    ', 'path=Resources.ECSLaunchConfiguration.Metadata.AWS::CloudFormation::Init
-                                    ', 'action=cfn-init.exe -v -s ', !Ref 'AWS::StackId', ' -r ECSLaunchConfiguration',
-                                    ' --region ', !Ref 'AWS::Region', '
-                                    ']]
-                    services: 
-                        windows:
-                            cfn-hup: 
-                                enabled: 'true'
-                                ensureRunning: 'true'
-                                files: 
-                                    - c:\cfn\cfn-hup.conf
-                                    - c:\etc\cfn\hooks.d\cfn-auto-reloader.conf
+      AWS::CloudFormation::Init:
+        config:
+          commands:
+            01_import_powershell_module:
+              command: !Sub powershell.exe -Command Import-Module ECSTools
+            02_add_instance_to_cluster:
+              command: !Sub powershell.exe -Command Initialize-ECSAgent -Cluster ${ECSDefaultCluster} -EnableTaskIAMRole
+          files:
+            'c:\cfn\cfn-hup.conf':
+              content: !Join 
+                - ''
+                - - |
+                    [main]
+                  - stack=
+                  - !Ref 'AWS::StackId'
+                  - |+
 
-      # UserData:
-      #   Fn::Base64:
-      #     !Sub |
-      #       <powershell>
-      #       ## The string 'windows' should be replaced with your cluster name
+                  - region=
+                  - !Ref 'AWS::Region'
+                  - |+
 
-      #       # Set agent env variables for the Machine context (durable)
-      #       [Environment]::SetEnvironmentVariable("ECS_CLUSTER", "${ECSDefaultCluster}", "Machine")
-      #       [Environment]::SetEnvironmentVariable("ECS_ENABLE_TASK_IAM_ROLE", "false", "Machine")
+            'c:\cfn\hooks.d\cfn-auto-reloader.conf':
+              content: !Join 
+                - ''
+                - - |
+                    [cfn-auto-reloader-hook]
+                  - |
+                    triggers=post.update
+                  - >
+                    path=Resources.ContainerInstances.Metadata.AWS::CloudFormation::Init
+                  - 'action=cfn-init.exe -v -s '
+                  - !Ref 'AWS::StackId'
+                  - ' -r ContainerInstances'
+                  - ' --region '
+                  - !Ref 'AWS::Region'
+                  - |+
 
-      #       Import-Module ECSTools
-      #       Initialize-ECSAgent -Cluster '${ECSDefaultCluster}' -EnableTaskIAMRole
-      #       # $agentVersion = 'latest'
-      #       # $agentZipUri = "https://s3.amazonaws.com/amazon-ecs-agent/ecs-agent-windows-$agentVersion.zip"
-      #       # $agentZipMD5Uri = "$agentZipUri.md5"
-
-
-      #       # ### --- Nothing user configurable after this point ---
-      #       # $ecsExeDir = "$env:ProgramFiles\Amazon\ECS"
-      #       # $zipFile = "$env:TEMP\ecs-agent.zip"
-      #       # $md5File = "$env:TEMP\ecs-agent.zip.md5"
-
-      #       # ### Get the files from S3
-      #       # Invoke-RestMethod -OutFile $zipFile -Uri $agentZipUri
-      #       # Invoke-RestMethod -OutFile $md5File -Uri $agentZipMD5Uri
-
-      #       # ## MD5 Checksum
-      #       # $expectedMD5 = (Get-Content $md5File)
-      #       # $md5 = New-Object -TypeName System.Security.Cryptography.MD5CryptoServiceProvider
-      #       # $actualMD5 = [System.BitConverter]::ToString($md5.ComputeHash([System.IO.File]::ReadAllBytes($zipFile))).replace('-', '')
-
-      #       # if($expectedMD5 -ne $actualMD5) {
-      #       #     echo "Download doesn't match hash."
-      #       #     echo "Expected: $expectedMD5 - Got: $actualMD5"
-      #       #     exit 1
-      #       # }
-
-      #       # ## Put the executables in the executable directory.
-      #       # Expand-Archive -Path $zipFile -DestinationPath $ecsExeDir -Force
-
-      #       # ## Start the agent script in the background.
-      #       # $jobname = "ECS-Agent-Init"
-      #       # $script =  "cd '$ecsExeDir'; .\amazon-ecs-agent.ps1"
-      #       # $repeat = (New-TimeSpan -Minutes 1)
-
-      #       # $jobpath = $env:LOCALAPPDATA + "\Microsoft\Windows\PowerShell\ScheduledJobs\$jobname\ScheduledJobDefinition.xml"
-      #       # if($(Test-Path -Path $jobpath)) {
-      #       #   echo "Job definition already present"
-      #       #   exit 0
-
-      #       # }
-
-      #       # $scriptblock = [scriptblock]::Create("$script")
-      #       # $trigger = New-JobTrigger -At (Get-Date).Date -RepeatIndefinitely -RepetitionInterval $repeat -Once
-      #       # $options = New-ScheduledJobOption -RunElevated -ContinueIfGoingOnBattery -StartIfOnBattery
-      #       # Register-ScheduledJob -Name $jobname -ScriptBlock $scriptblock -Trigger $trigger -ScheduledJobOption $options -RunNow
-      #       # Add-JobTrigger -Name $jobname -Trigger (New-JobTrigger -AtStartup -RandomDelay 00:1:00)
-      #       # end script
-      #       cfn-init.exe -v -s ${AWS::StackId} -r AWSLC --region ${AWS::Region}
-      #       cfn-signal.exe -e $lastexitcode --stack ${AWS::StackName} --resource ASGDefault --region ${AWS::Region} 
-
-      #       </powershell>
-      #       <persist>true</persist>
-
+          services:
+            windows:
+              cfn-hup:
+                enabled: 'true'
+                ensureRunning: 'true'
+                files:
+                  - 'c:\cfn\cfn-hup.conf'
+                  - 'c:\cfn\hooks.d\cfn-auto-reloader.conf'
 
 
   ASGDefault:
